--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "tauri:dev": "RUST_LOG=debug tauri dev",
     "build:dmg": "tauri build --bundles dmg",
     "check": "tsc --noEmit && cd src-tauri && cargo check"
   },
